--- a/site/training/assets/training.css
+++ b/site/training/assets/training.css
@@ -182,4 +182,10 @@ a.nav-link:hover:has(.fa-house) {
   }
 }
 
-
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+  color: #EAF8FA;
+  background-color: #042426;
+  border-color: var(--bs-nav-tabs-link-active-border-color);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
