Updated Developer Fundamentals training (#681)
* Edits for training paths, fixing weird casing

* Edits to Developer Fundamentals path

* Edits to Validator Fundamentals path

* Applying the variable where it was forgotten

* More edits to paths

* More edits to paths x2

* Modifying Makefile to make copy of new notebooks

* Pulled in latest from validmind-library

* Updated template for course registration

* Updated the Developer Fundamentals registration

* Adjusting the bullets for dev

* Draft for developer module 1

* Developer Fundamentals - Intro draft

* Developer Fundamentals - Register model draft

* Developer Fundamentals - Module 1 draft

* Removed extra drop-down menu from training

* Updated JH links

* Set up for Learning to run tests

* Learning to run tests - Explore tests draft

* Learning to run tests - Explore tests edits

* Learning to run tests - Run ValidMind tests draft

* Tweaking text size

* Learning to run tests - Log Validind tests draft

* Learning to run tests - draft

* Implementing custom tests — P1 draft

* Implementing custom tests — P2 setup

* Implementing custom tests — Draft done

* Finalizing model documentation set up

* Finalizing model documentation — Refine model documentation draft

* Finalizing model documentaiton - Submit for approval

* Finalizing model documentaiton - draft done

* Edited link to JH on landing

* Finetuning learning paths

* Editing Using VM for model dev

* Editing Learning 2 run tests

* Editing Implementing custom tests

* Editing Finalizing model documentation

* Editing the API ref .html links to .qmd

* Prereq cleanup

* Get your code snippet workaround

* Using VM for model development register model edit

* Updated the course template

* Tweaking Before you start

* Tested & updated run times

* Updated the est. for the listings

* Updated historical test result metadata

* ?? Why is the filter not working

* Getting rid of more conditions to check

* Changing env > vars for ENABLE_DEMO_NOTEB

--- a/site/training/assets/slides.scss
+++ b/site/training/assets/slides.scss
@@ -164,3 +164,9 @@ section.has-dark-background a:hover {
   color: #b67a16ff;
 }
 
+.reveal .slide input[type="checkbox"] {
+  accent-color: #de257e; /* Changes the checkmark color */
+  border: 2px solid #de257e;
+  border-radius: 4px; /* Optional: makes it slightly rounded */
+}
+
