slideover BG adjust

--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -20,10 +20,12 @@
 
 .slideover__content {
     position: fixed;
-    background: #eaf8fa;
-    color: #083e44;
-    border: 1px solid #083e44;
-    box-shadow: -2px 0 4px rgba(8, 62, 68, 0.1), 0 0 4px rgba(8, 62, 68, 0.1);
+    background: #FAFAFA;
+    color: #222222;
+    border: 1px solid #083E44;
+    /* border-left-width: 5px; */
+    border-radius: 5px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
     transition: transform 0.3s ease-in-out;
     pointer-events: auto;
     z-index: 1001;
@@ -117,7 +119,6 @@
     padding-right: 3rem;
     padding-top: 0px;
     text-align: left;
-    background: #eaf8fa;
 }
 
 .slideover__header {
@@ -128,7 +129,6 @@
     cursor: pointer;
     flex-shrink: 0;
     padding: 0 8px;
-    background: #eaf8fa;
     margin: 0;
     position: relative;
     z-index: 3;
@@ -169,7 +169,6 @@
 .slideover__content-area {
     padding: 0 1.5rem 1.5rem;
     overflow-y: auto;
-    background: #eaf8fa;
     color: #083e44;
     line-height: 1.5;
     margin: -40px 0 0 0;
@@ -215,7 +214,6 @@
     padding-left: 3rem;
     padding-right: 3rem;
     text-align: left;
-    background: #eaf8fa;
 }
 
 @media screen and (max-width: 800px) {
