slideover border styling

--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -52,6 +52,7 @@
     padding: 20px;
     border-radius: 8px 0 0 8px;
     overflow: hidden;
+    border-left-width: 5px;
 }
 
 .slideover--r .slideover__content-area {
@@ -80,6 +81,7 @@
     text-align: left;
     overflow: hidden;
     padding-bottom: 20px;
+    border-top-width: 5px;
 }
 .slideover--b.slideover__content.slideover__content--active {
     transform: translateX(-50%) translateY(0);
@@ -98,6 +100,7 @@
     padding: 20px;
     text-align: left;
     overflow: hidden;
+    border-bottom-width: 5px;
 }
 
 .slideover--t.slideover__content.slideover__content--active {
@@ -319,6 +322,7 @@
     padding: 20px;
     border-radius: 0 8px 8px 0;
     overflow: hidden;
+    border-right-width: 5px;
 }
 
 .slideover--l .slideover__content-area {
