slideover bold & links

--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -183,6 +183,19 @@
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 
+.slideover__content-area strong {
+    color: #3E6C69;
+}
+
+.slideover__content-area a {
+    color: #DE257E;
+    text-decoration: none;
+}
+
+.slideover__content-area a:hover {
+  text-decoration: underline 2px solid #083E44;
+}
+
 .slideover__content--active .slideover__content-area {
     z-index: 3;
 }
