--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -192,6 +192,16 @@
     text-decoration: none;
 }
 
+.slideover__content-area .embed {
+    margin-left: 25px;
+    border: 1px solid #042426;
+    background: #EAF8FA;
+    border-radius: 5px;
+    font-size: 0.9em;
+    padding-left: 20px;
+    padding-top: 0px;
+}
+
 .slideover__content-area a:hover {
   text-decoration: underline 2px solid #083E44;
 }
