slideover code adjust

--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -307,19 +307,19 @@
 
 .slideover__content-area div.sourceCode {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    color: #003b4f;
-    background-color: #f5fcfd;
     font-size: 0.9em;
-    background-color: #f5fcfd;
+    background-color: #FAFAFA;
     padding: 0.4em 0.6em;
-    border: 1px solid rgba(8, 62, 68, 0.2);
-    border-radius: 3px;
 }
 
 .slideover__content-area code {
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    color: #3E6C69;
     background-color: #f5fcfd;
+    font-size: 0.9em;
     padding: 0.1em 0.2em;
-    border-radius: 3px;
+    border: 1px solid rgba(8, 62, 68, 0.2);
+    border-radius: 5px;
 }
 
 .slideover__content-area pre.numberSource {
