Tweaking embed & code

--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -194,12 +194,12 @@
 
 .slideover__content-area .embed {
     margin-left: 25px;
-    border: 1px solid #042426;
-    background: #EAF8FA;
-    border-radius: 5px;
-    font-size: 0.9em;
     padding-left: 20px;
     padding-top: 0px;
+    background-color: #f5fcfd;
+    font-size: 0.9em;
+    border: 1px solid rgba(8, 62, 68, 0.2);
+    border-radius: 5px;
 }
 
 .slideover__content-area a:hover {
@@ -299,7 +299,7 @@
 }
 
 .slideover__content-area blockquote {
-    border-left: 4px solid #083e44;
+    border-left: 2px solid #3E6C69;
     margin: 1em 0;
     padding-left: 1em;
     color: #555;
@@ -315,7 +315,7 @@
 .slideover__content-area code {
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     color: #3E6C69;
-    background-color: #f5fcfd;
+    background-color: #EAF8FA;
     font-size: 0.9em;
     padding: 0.1em 0.2em;
     border: 1px solid rgba(8, 62, 68, 0.2);
