Fixing top & left rotational arrows

--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -365,6 +365,22 @@
     left: auto;
 }
 
+.slideover--l .slideover__toggle {
+    transform: rotate(180deg);
+}
+
+.slideover--l .slideover__toggle--active {
+    transform: rotate(0deg);
+}
+
+.slideover--t .slideover__toggle {
+    transform: rotate(180deg);
+}
+
+.slideover--t .slideover__toggle--active {
+    transform: rotate(0deg);
+}
+
 .slideover--l .slideover__header {
     margin: -20px 0;
 }
