Applying width fixes here too

--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -5,6 +5,52 @@
     position: relative;
 }
 
+:root {
+    --slideover-default-lr: 40vw;
+    --slideover-default-tb: 80vw;
+
+    --slideover-quarter-lr: calc(var(--slideover-default-lr) * 0.75);
+    --slideover-quarter-tb: calc(var(--slideover-default-tb) * 0.75);
+
+    --slideover-half-lr: calc(var(--slideover-default-lr) / 2);
+    --slideover-half-tb: calc(var(--slideover-default-tb) / 2);
+
+    --slideover-third-lr: calc(var(--slideover-default-lr) / 3);
+    --slideover-third-tb: calc(var(--slideover-default-tb) / 3);
+}
+
+/* Modifiers for half, third, three quarters (LR) */
+.slideover--l.slideover__content.half,
+.slideover--r.slideover__content.half {
+    width: var(--slideover-half-lr) !important;
+}
+
+.slideover--l.slideover__content.third,
+.slideover--r.slideover__content.third {
+    width: var(--slideover-third-lr) !important;
+}
+
+.slideover--l.slideover__content.quarters,
+.slideover--r.slideover__content.quarters {
+    width: var(--slideover-quarters-lr) !important;
+}
+
+/* Modifiers for half, third, three quarters (TB) */
+.slideover--t.slideover__content.half,
+.slideover--b.slideover__content.half {
+    width: var(--slideover-half-tb) !important;
+}
+
+.slideover--t.slideover__content.third,
+.slideover--b.slideover__content.third {
+    width: var(--slideover-third-tb) !important;
+}
+
+.slideover--t.slideover__content.quarters,
+.slideover--b.slideover__content.quarters {
+    width: var(--slideover-quarters-tb) !important;
+}
+
 .slideover__container {
     position: fixed;
     top: 0;
@@ -42,7 +88,7 @@
     left: auto;
     height: auto;
     max-height: 80vh;
-    width: 40vw;
+    width: var(--slideover-default-lr);
     max-width: 100vw;
     box-sizing: border-box;
     transform: translateY(-50%) translateX(calc(100% - 60px));
@@ -72,7 +118,7 @@
     left: 50%;
     transform: translateX(-50%) translateY(calc(100% - 70px));
     top: auto;
-    width: 80%;
+    width: var(--slideover-default-tb);
     height: auto;
     max-height: 40vh;
     border-radius: 8px 8px 0 0;
@@ -92,7 +138,7 @@
     left: 50%;
     transform: translateX(-50%) translateY(calc(-100% + 70px));
     bottom: auto;
-    width: 80%;
+    width: var(--slideover-default-tb);
     height: auto;
     max-height: 40vh;
     border-radius: 0 0 8px 8px;
@@ -335,7 +381,7 @@
     right: auto;
     height: auto;
     max-height: 80vh;
-    width: 40vw;
+    width: var(--slideover-default-lr);
     max-width: 100vw;
     box-sizing: border-box;
     transform: translateY(-50%) translateX(calc(-100% + 60px));
