Updating template reference

--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -9,8 +9,8 @@
     --slideover-default-lr: 40vw;
     --slideover-default-tb: 80vw;
 
-    --slideover-quarter-lr: calc(var(--slideover-default-lr) * 0.75);
-    --slideover-quarter-tb: calc(var(--slideover-default-tb) * 0.75);
+    --slideover-quarters-lr: calc(var(--slideover-default-lr) * 0.75);
+    --slideover-quarters-tb: calc(var(--slideover-default-tb) * 0.75);
 
     --slideover-half-lr: calc(var(--slideover-default-lr) / 2);
     --slideover-half-tb: calc(var(--slideover-default-tb) / 2);
