--- a/site/styles.css
+++ b/site/styles.css
@@ -176,7 +176,7 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   margin-top: -50px;
   padding: 100px;
   color: white;
-  min-height: 400px;
+  min-height: 200px;
   z-index: 1; 
   background-color: #083E44 !important;
 }
@@ -189,6 +189,8 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   background-position: center top; 
   background-size: 1000px;
   z-index: -1;
+  /* width: 100%; */
+  background-size: contain;
 }
 
 .get-started {
@@ -196,7 +198,7 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   background-image: url('/assets/img/ecosystem-checks.svg'), url('/assets/img/ecosystem-checks.svg');
   background-repeat: no-repeat, no-repeat;
   background-position: left 20px top 40px, right 20px bottom 40px;
-  background-size: 500px; /* Or specify the size if needed */
+  background-size: auto; /* Or specify the size if needed */
   padding-top: 50px;
   padding-right: 50px;
   padding-left: 50px;
@@ -204,10 +206,11 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 }
 
 .training {
-  margin-top: 25px;
+  /* margin-top: 25px; */
   padding: 50px;
   padding-bottom: 25px;
   padding-top: 25px;
+  margin-bottom: 40px;
 }
 
 .overview {
@@ -215,6 +218,17 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   padding-right: 50px;
   padding-left: 50px;
   margin-top: 15px;
+  /* margin-bottom: 40px; */
+}
+
+.tour {
+  padding-right: 50px;
+  padding-left: 50px;
+  margin-top: 15px;
+  background-image: url('assets/img/inputoutput-pink.svg');
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  height: 375px;
   margin-bottom: 40px;
 }
 
@@ -270,14 +284,6 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   font-size: larger;
 }
 
-.smallercaps {
-  font-weight: bold;
-  font-size: smaller;
-  font-variant: small-caps;
-  position: relative;
-  top: -5px;
-}
-
 input[type="checkbox"] {
   width: 1em;
   height: 1rem;
@@ -305,45 +311,6 @@ input[type="checkbox"][checked] {
 
 .attn h2 {
   color: #083E44;
-}
-
-.attn-yellow {
-  margin-top: 20px;
-  margin-bottom: 40px;
-  border: 2px solid #083E44;
-  border-left-width: 0px;
-  border-right-width: 0px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 40px;
-  background-color: rgb(250, 245, 145);
-}
-
-.attn-orange {
-  margin-top: 20px;
-  margin-bottom: 40px;
-  border: 2px solid #083E44;
-  border-left-width: 0px;
-  border-right-width: 0px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 40px;
-  background-color: rgb(252, 169, 110);
-}
-
-.attn-red {
-  margin-top: 20px;
-  margin-bottom: 40px;
-  border: 2px solid #083E44;
-  border-left-width: 0px;
-  border-right-width: 0px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 40px;
-  background-color: rgb(255, 109, 109);
 }
 
 .highlights {
@@ -381,7 +348,7 @@ input[type="checkbox"][checked] {
 
 .image-container {
   position: relative;
-  z-index: -1;
+  z-index: 1;
 }
 
 .image-container img {
@@ -478,26 +445,6 @@ figcaption {
   margin-top: 10px;
   color: white;
   background-color: #083E44;
-  border: 1px solid #083E44;
-}
-
-.button-small {
-  /* font-size: 0.6em; */
-  font-variant: small-caps;
-  color: #083E44;
-  background-color: #B5B5B510;
-  border: 1px solid #083E44;
-  /* font-weight: bold; */
-  border-radius: 3px;
-  padding: 2px 5px;
-  vertical-align: middle;
-  line-height: 35px;
-}
-
-.button-small:hover {
-  color: #083E44;
-  text-decoration: none;
-  background-color: #EAF8FA;
   border: 1px solid #083E44;
 }
 
@@ -599,6 +546,10 @@ figcaption {
   color: #DE257E;
 }
 
+.accent {
+  color: #073E44;
+}
+
 .green {
   color: green;
 }
@@ -664,7 +615,10 @@ hr.sidebar-divider.hi {
 
 nav#TOC {
   padding: 13px;
+  background-color: white;
   border: 1px solid #bdc1c4;
+  /* border-bottom: 2px solid #196972;
+  border-right: 2px solid #196972; */
   border-radius: 3px;
   background-color: #FAFBFB;
 }
@@ -806,3 +760,36 @@ button.aa-DetachedSearchButton:hover svg path {
     display: none !important;
   }
 } */
+
+.watermark {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-30deg);
+  font-size: 5rem;
+  font-weight: bold;
+  color: rgba(200, 200, 200, 0.5); /* Adjust transparency */
+  z-index: 1000;
+  pointer-events: none; /* Prevent interaction */
+  white-space: nowrap;
+}
+
+body::before {
+  content: "MOCKUP — NOT FINAL CONTENT / DESIGN MOCKUP — NOT FINAL CONTENT / DESIGN MOCKUP — NOT FINAL CONTENT / DESIGN MOCKUP — NOT FINAL CONTENT / DESIGN MOCKUP — NOT FINAL CONTENT / DESIGN MOCKUP — NOT FINAL CONTENT / DESIGN";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 4vw;
+  font-weight: bold;
+  color: rgba(222, 37, 126, 0.10);
+  z-index: 999;
+  pointer-events: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: 1.5;
+}
