--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -30,8 +30,8 @@
     width: var(--slideover-third-lr) !important;
 }
 
-.slideover--l.slideover__content.quarters,
-.slideover--r.slideover__content.quarters {
+.slideover--l.slideover__content.three-quarters,
+.slideover--r.slideover__content.three-quarters {
     width: var(--slideover-quarters-lr) !important;
 }
 
@@ -46,8 +46,8 @@
     width: var(--slideover-third-tb) !important;
 }
 
-.slideover--t.slideover__content.quarters,
-.slideover--b.slideover__content.quarters {
+.slideover--t.slideover__content.three-quarters,
+.slideover--b.slideover__content.three-quarters {
     width: var(--slideover-quarters-tb) !important;
 }
 
