--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -9,8 +9,8 @@
     --slideover-default-lr: 40vw;
     --slideover-default-tb: 80vw;
 
-    --slideover-quarters-lr: calc(var(--slideover-default-lr) * 0.75);
-    --slideover-quarters-tb: calc(var(--slideover-default-tb) * 0.75);
+    --slideover-3quarters-lr: calc(var(--slideover-default-lr) * 0.75);
+    --slideover-3quarters-tb: calc(var(--slideover-default-tb) * 0.75);
 
     --slideover-half-lr: calc(var(--slideover-default-lr) / 2);
     --slideover-half-tb: calc(var(--slideover-default-tb) / 2);
@@ -32,7 +32,7 @@
 
 .slideover--l.slideover__content.three-quarters,
 .slideover--r.slideover__content.three-quarters {
-    width: var(--slideover-quarters-lr) !important;
+    width: var(--slideover-3quarters-lr) !important;
 }
 
 /* Modifiers for half, third, three quarters (TB) */
@@ -48,7 +48,7 @@
 
 .slideover--t.slideover__content.three-quarters,
 .slideover--b.slideover__content.three-quarters {
-    width: var(--slideover-quarters-tb) !important;
+    width: var(--slideover-3quarters-tb) !important;
 }
 
 .slideover__container {
