Validation Fundamentals - slideovers

--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -399,8 +399,7 @@ q {
     font-weight: 700;
 }
 
-.slideover__content-area em,
-.slideover__content-area i {
+.slideover__content-area em {
     font-style: italic;
 }
 
