--- a/site/_extensions/nrichers/slideover/slideover.css
+++ b/site/_extensions/nrichers/slideover/slideover.css
@@ -378,6 +378,7 @@
     padding-top: 0px;
     font-size: 0.9em;
     border-radius: 5px;
+    padding-right: 1rem !important;
 }
 
 /* Quotations */
