"changes for the new homepage: index.qmd, style.cs, etc...

--- a/site/styles.css
+++ b/site/styles.css
@@ -178,14 +178,14 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   color: white;
   min-height: 200px;
   z-index: 1; 
-  background-color: #083E44 !important;
+  background-color: #EDF9FA !important
 }
 
 .hero::before {
   content: "";
   position: absolute;
   inset: 0; 
-  background: url('/assets/img/about-us-esphere.svg') no-repeat;
+  /*background: url('/assets/img/about-us-esphere.svg') no-repeat;*/
   background-position: center top; 
   background-size: 1000px;
   z-index: -1;
@@ -245,7 +245,7 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 }
 
 .nav-item {
-  padding-right: 15px;
+  padding-right: 20px;
 }
 
 .navbar-logo {
@@ -604,7 +604,7 @@ figcaption {
   color: #DE257E !important; 
 }
 
-.sidebar-item-container .sidebar-item-toggle {
+.sidebar-item- .sidebar-item-toggle {
   cursor: pointer;
   color: #083E44;
 }
