Updted homepage based of the latest design from figma.

--- a/site/styles.css
+++ b/site/styles.css
@@ -20,6 +20,7 @@ html {
 
 body {
   color: #1A202C;
+  background-color: #EDF9FA
 }
 
 a {
@@ -178,7 +179,7 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   color: white;
   min-height: 200px;
   z-index: 1; 
-  background-color: #EDF9FA !important
+  /* background-color: #EDF9FA !important */
 }
 
 .hero::before {
@@ -194,8 +195,8 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 }
 
 .get-started {
-  background-color: #F9F9F9;
-  background-image: url('/assets/img/ecosystem-checks.svg'), url('/assets/img/ecosystem-checks.svg');
+  /* background-color: #F9F9F9; */
+  /* background-image: url('/assets/img/ecosystem-checks.svg'), url('/assets/img/ecosystem-checks.svg'); */
   background-repeat: no-repeat, no-repeat;
   background-position: left 20px top 40px, right 20px bottom 40px;
   background-size: auto; /* Or specify the size if needed */
@@ -833,10 +834,16 @@ body::before {
 
 /* Card look for main sections */
 .ba.b--black-10.br3.shadow-4.bg-white {
-  box-shadow: 0 4px 16px rgba(6, 58, 59, 0.08);
-  border: 1px solid #e5e7eb;
-  border-radius: 12px;
-  background: #fff;
+  box-shadow: 0 -4px 16px rgba(6, 58, 59, 0.08); /* Top shadow only */
+  /* border-top: 1px solid #e5e7eb;
+  border-left: 1px solid #e5e7eb;
+  border-right: 1px solid #e5e7eb;
+  border-bottom: none; /* Remove bottom border */
+  /* border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  background: #fff; */ 
 }
 
 /* Button styles */
