--- a/site/styles.css
+++ b/site/styles.css
@@ -918,3 +918,73 @@ body::before {
   background: #fff;
   box-shadow: 0 2px 8px #063a3b1a;
 }
+.tour-bg {
+  background-image: url("/homepage_docsite/freckles_bckgd.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 1rem 1rem; /* Extra padding so the image shows up nicely */
+  border-radius: 8px;
+}
+
+/* Added for the new footer */
+
+.footer-container {
+  background-color: #26818B;
+  color: white;
+  padding: 3rem 2rem;
+}
+
+.footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.footer-left {
+  flex: 1 1 250px;
+  margin-right: 2rem;
+}
+
+.footer-left p {
+  font-size: 0.875rem;
+  line-height: 1.4;
+  color: white;
+}
+
+.footer-left a {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.footer-columns {
+  display: flex;
+  flex: 3 1 700px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer-column {
+  flex: 1 1 150px;
+  margin-bottom: 1.5rem;
+}
+
+.footer-column h4 {
+  font-size: 1rem;
+  margin-bottom: 0.75rem;
+  color: white;
+}
+
+.footer-column a {
+  color: white;
+  font-size: 0.875rem;
+  line-height: 1.6;
+  text-decoration: none;
+}
+
+.footer-column a:hover {
+  text-decoration: underline;
+}
