--- a/site/styles.css
+++ b/site/styles.css
@@ -932,7 +932,9 @@ body::before {
 .footer-container {
   background-color: #26818B;
   color: white;
-  padding: 3rem 2rem;
+  padding: 2rem 0rem;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .footer-content {
@@ -945,7 +947,8 @@ body::before {
 
 .footer-left {
   flex: 1 1 250px;
-  margin-right: 2rem;
+  margin-right: 0rem;
+  margin-right: 0;
 }
 
 .footer-left p {
@@ -965,6 +968,7 @@ body::before {
   flex: 3 1 700px;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 1.5rem;
 }
 
 .footer-column {
