modified index.qmd and style.css

--- a/site/styles.css
+++ b/site/styles.css
@@ -939,6 +939,7 @@ body::before {
 
 .footer-content {
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
   justify-content: space-between;
   max-width: 1200px;
