Fix merge conflict

--- a/site/_extensions/nrichers/slideover/custom-slideover.css
+++ b/site/_extensions/nrichers/slideover/custom-slideover.css
@@ -1,10 +1,10 @@
 /* Global variables */
 :root {
-    --slideover-default-bg: #eaf8fa;
+    --slideover-default-bg: #FAFAFA;
     --slideover-default-text: #083e44;
     --slideover-default-border: 1px solid #083e44;
-    --slideover-default-links: #0000EE;
-    --slideover-default-accent: #555;
+    --slideover-default-links: #DE257E;
+    --slideover-default-accent: #3E6C69;
 }
 
 /* Global slideover styling */
@@ -16,38 +16,37 @@
 
 /* Right-aligned emphasis border */
 .slideover--r.slideover__content {
-    /* border-left-width: 5px !important; */
+    border-left-width: 5px !important;
 }
 
 /* Left-aligned emphasis border */
 .slideover--l.slideover__content {
-    /* border-right-width: 5px !important; */
+    border-right-width: 5px !important;
 }
 
 /* Top-aligned emphasis border */
 .slideover--t.slideover__content {
-    /* border-bottom-width: 5px !important; */
+    border-bottom-width: 5px !important;
 }
 
 /* Bottom-aligned emphasis border */
 .slideover--b.slideover__content {
-    /* border-top-width: 5px !important; */
+    border-top-width: 5px !important;
 }
 
 /* Link styling */
-
 .slideover__content-area a {
     color: var(--slideover-default-links);
-    /* text-decoration: none; */
+    text-decoration: none;
 }
 
 .slideover__content-area a:hover {
-  /* text-decoration: underline 2px solid var(--slideover-default-text); */
+  text-decoration: underline 2px solid var(--slideover-default-text);
 }
 
 /* Callout embed styling */
 .slideover__content-area .embed {
-    background-color: white;
+    background-color: #f5fcfd;
     border: 1px solid rgba(8, 62, 68, 0.2);
 }
 
@@ -62,10 +61,10 @@
 /* Quotation styling */
 q {
     color: var(--slideover-default-accent) !important;
-} 
+}
 
 .slideover__content-area blockquote {
-    border-left: 4px solid var(--slideover-default-text) !important;
+    border-left: 4px solid var(--slideover-default-accent) !important;
     color: var(--slideover-default-accent) !important;
 }
 
@@ -76,6 +75,6 @@ q {
 
 .slideover__content-area code {
     color: var(--slideover-default-text) !important;
-    background-color: white;
+    background-color: #EAF8FA;
     border: 1px solid rgba(8, 62, 68, 0.2);
 }
