most recent changes

--- a/site/styles.css
+++ b/site/styles.css
@@ -176,7 +176,7 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   position: relative;
   margin-top: -50px;
   padding: 100px;
-  color: white;
+  color: EDF9FA;
   min-height: 200px;
   z-index: 1; 
   /* background-color: #EDF9FA !important */
@@ -186,7 +186,7 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
   content: "";
   position: absolute;
   inset: 0; 
-  /*background: url('/assets/img/about-us-esphere.svg') no-repeat;*/
+  background-color: #EDF9FA;
   background-position: center top; 
   background-size: 1000px;
   z-index: -1;
@@ -447,6 +447,7 @@ figcaption {
   color: white;
   background-color: #083E44;
   border: 1px solid #083E44;
+  font-weight: bold;
 }
 
 .cta {
@@ -461,8 +462,8 @@ figcaption {
   transition: color 0.15s ease-in, background-color 0.15s ease-in;
   font-weight: bold;
   text-align: center;
-  font-variant: small-caps;
-  font-size: 20px;
+  /* font-variant: small-caps; */
+  font-size: 16px;
 }
 
 .cta:hover {
@@ -471,9 +472,9 @@ figcaption {
 }
 
 #nav-menu-log-in {
-  background-color: white;
-  border: 1px solid #de257e;
-  color: #de257e;
+  background-color: #083E44;
+  border: 1px solid #083E44;
+  color: #fff;
   padding: 0.375rem 0.75rem;
   border-radius: 2px;
   text-decoration: none;
@@ -902,13 +903,18 @@ body::before {
   color: #DE257E;
 }
 
+/*for doc homepage pink writing*/
+.normal-weight {
+  font-weight: normal;
+}
+
 /* Overview section background */
 .bg-washed-blue {
   background: #edf9fa !important;
 }
 
 /* Search box */
-#searchbox {
+/* #searchbox {
   max-width: 600px;
   margin: 0 auto 24px auto;
   padding: 12px 24px;
@@ -917,14 +923,16 @@ body::before {
   font-size: 16px;
   background: #fff;
   box-shadow: 0 2px 8px #063a3b1a;
-}
+} */
+
+
 .tour-bg {
   background-image: url("/homepage_docsite/freckles_bckgd.svg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
-  padding: 1rem 1rem; /* Extra padding so the image shows up nicely */
-  border-radius: 8px;
+  background-size: 1200px auto; /* increase size horizontally, auto height */
+  padding: 2rem 1rem; /* add more top/bottom padding for better spacing */
+  border-radius: 2px;
 }
 
 /* Added for the new footer */
