--- a/site/styles.css
+++ b/site/styles.css
@@ -174,12 +174,12 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 
 .hero {
   position: relative;
-  margin-top: -50px;
+  margin-top: 0px;
   padding: 100px;
   color: EDF9FA;
   min-height: 200px;
   z-index: 1; 
-  /* background-color: #EDF9FA !important */
+  background-color: #EDF9FA !important
 }
 
 .hero::before {
@@ -195,7 +195,7 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 }
 
 .get-started {
-  /* background-color: #F9F9F9; */
+  background-color: #EDF9FA;
   /* background-image: url('/assets/img/ecosystem-checks.svg'), url('/assets/img/ecosystem-checks.svg'); */
   background-repeat: no-repeat, no-repeat;
   background-position: left 20px top 40px, right 20px bottom 40px;
@@ -945,77 +945,42 @@ body::before {
   padding-right: 0;
 }
 
-.footer-content {
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: auto;
-}
-
-.footer-left {
-  flex: 1 1 250px;
-  margin-right: 0rem;
-  margin-right: 0;
-}
-
-.footer-left p {
-  font-size: 0.875rem;
-  line-height: 1.4;
-  color: white;
-}
-
-.footer-left a {
-  color: white;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.footer-columns {
-  display: flex;
-  flex: 3 1 700px;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-}
-
-.footer-column {
-  flex: 1 1 150px;
-  margin-bottom: 1.5rem;
-}
-
-.footer-column h4 {
-  font-size: 1rem;
-  margin-bottom: 0.75rem;
-  color: white;
-}
-
-.footer-column a {
-  color: white;
-  font-size: 0.875rem;
-  line-height: 1.6;
-  text-decoration: none;
-}
-
-.footer-column a:hover {
-  text-decoration: underline;
-}
 
 /* Sticky footer: ensure footer-container is always at the bottom */
-html, body {
+.page-footer {
+  background-color: #26818B;
+  color: white;
+  padding: 2rem 1rem;
+  font-size: 0.875rem;
+  line-height: 1.6;
+}
+
+.page-footer a {
+  color: white;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+.page-footer a:hover {
+  text-decoration: underline;
+}
+.page-footer img {
+  margin-bottom: 0.5rem;
+}
+
+/* html, body {
   height: 100%;
   min-height: 100%;
   display: flex;
   flex-direction: column;
-}
-
+} */
+/* 
 body {
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
-}
+} */
 
-.footer-container {
+/* .footer-container {
   margin-top: auto;
-}
+} */
