--- a/site/styles.css
+++ b/site/styles.css
@@ -723,8 +723,9 @@ h2, .h2 {
   display: none;
 }
 
-button.aa-DetachedSearchButton svg path {
-  fill: #de257e !important;
+/* to delete pink search icon */
+button.aa-DetachedSearchButton svg {
+  display: none !important;
 }
 
 button.aa-DetachedSearchButton:hover svg path {
@@ -955,6 +956,7 @@ body::before {
   min-width: 180px;
   text-align: left;
 }
+
 
 /* Responsive: stack columns on small screens */
 @media (max-width: 900px) {
