--- a/site/styles.css
+++ b/site/styles.css
@@ -20,7 +20,7 @@ html {
 
 body {
   color: #1A202C;
-  /* background-color: #EDF9FA */
+
 }
 
 a {
@@ -196,8 +196,6 @@ pre, pre.python, pre.bash, pre.yaml, pre.markdown {
 
 .get-started {
   background-color: #EDF9FA;
-  /* background-image: url('/assets/img/ecosystem-checks.svg'), url('/assets/img/ecosystem-checks.svg'); */
-  background-repeat: no-repeat, no-repeat;
   background-position: left 20px top 40px, right 20px bottom 40px;
   background-size: auto; /* Or specify the size if needed */
   padding-top: 50px;
@@ -729,31 +727,9 @@ button.aa-DetachedSearchButton svg {
 }
 
 button.aa-DetachedSearchButton:hover svg path {
-  fill: #AF1A62 !important;
-}
-
-/* section#footnotes {
+  /* fill: #AF1A62 !important; */
   display: none !important;
 }
-
-#quarto-appendix.default {
-    border-top: none !important;
-} */
- 
-/* .figure-img
-{
-  border: 1px solid #222425; 
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
-  border-radius: 5px;
-  padding: 20px;
-} */
-
-/* NO MARGIN FOOTNOTES ON MOBILE */
-/* @media only screen and (max-width: 767px) {
-  .column-margin {
-    display: none !important;
-  }
-} */
 
 .watermark {
   position: fixed;
